// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button css matches the snapshot 1`] = `
".slds-button-group,
.slds-button-group-list {
  display: -ms-inline-flexbox;
  display: inline-flex; }

.slds-button-group .slds-button,
.slds-button-group-list .slds-button {
  border-radius: 0;
  border-width: 1px; }

.slds-button-group .slds-button:focus,
.slds-button-group-list .slds-button:focus {
  z-index: 1; }

.slds-button-group .slds-button + .slds-button,
.slds-button-group .slds-button + .slds-button_last .slds-button,
.slds-button-group .slds-button + .slds-button--last .slds-button,
.slds-button-group-list li + li .slds-button {
  margin-left: -1px; }

.slds-button-group-list li:first-child .slds-button,
.slds-button-group .slds-button:first-child {
  border-radius: 0.25rem 0 0 0.25rem; }
.slds-button {
  position: relative;
  display: inline-block;
  padding: 0;
  background: transparent;
  background-clip: border-box;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  line-height: 1.875rem;
  text-decoration: none;
  color: #0070d2;
  -webkit-appearance: none;
  white-space: normal;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none; }

.slds-button:hover, .slds-button:focus, .slds-button:active, .slds-button:visited {
  text-decoration: none; }

.slds-button:hover, .slds-button:focus {
  color: #005fb2; }

.slds-button:focus {
  outline: 0;
  box-shadow: 0 0 3px #0070D2; }

.slds-button:active {
  color: #005fb2; }

.slds-button[disabled] {
  color: #dddbda; }

.slds-button[disabled] * {
  pointer-events: none; }

.slds-button a {
  color: currentColor; }

.slds-button:hover .slds-button__icon, .slds-button:focus .slds-button__icon, .slds-button:active .slds-button__icon, .slds-button[disabled] .slds-button__icon {
  fill: currentColor;
  pointer-events: none; }

.slds-button + .slds-button-group,
.slds-button + .slds-button-group-list {
  margin-left: 0.25rem; }

.slds-button + .slds-button {
  margin-left: 0.25rem; }
.slds-button-space-left {
  margin-left: 0.25rem; }

"
`;

exports[`button, datepicker css matches the snapshot 1`] = `
".slds-datepicker {
  padding: 0;
  font-size: 0.75rem; }

.slds-datepicker th,
.slds-datepicker td {
  text-align: center; }

.slds-datepicker th {
  padding: 0.5rem;
  font-weight: 400;
  color: #706e6b; }

.slds-datepicker td {
  padding: 0.25rem;
  text-align: center;
  font-size: 0.75rem; }

.slds-datepicker td > .slds-day {
  width: 2rem;
  height: 2rem;
  display: block;
  position: relative;
  min-width: 2rem;
  line-height: 2rem;
  border-radius: 50%;
  margin: auto; }

.slds-datepicker td:hover:not(.slds-disabled-text) > .slds-day,
.slds-datepicker td:focus:not(.slds-disabled-text) > .slds-day,
.slds-datepicker td.slds-is-today > .slds-day {
  cursor: pointer; }

.slds-datepicker td.slds-is-today > .slds-day {
  background-color: #ecebea; }

.slds-datepicker td:focus {
  outline: 0; }

.slds-datepicker td:focus > .slds-day {
  box-shadow: #0070d2 0 0 0 1px inset; }

.slds-datepicker td.slds-is-selected > .slds-day {
  background: #0070d2;
  color: white; }

.slds-datepicker td.slds-is-selected:focus > .slds-day {
  background: #005fb2;
  box-shadow: #005fb2 0 0 3px;
  color: white; }

.slds-datepicker { }

.slds-datepicker .slds-has-multi-selection .slds-is-selected-multi:last-child > .slds-day:after {
  left: auto;
  right: 0;
  transform: translateX(0.25rem); }

.slds-datepicker .slds-has-multi-row-selection .slds-is-selected-multi:first-child > .slds-day:before,
.slds-datepicker .slds-has-multi-row-selection .slds-is-selected-multi:last-child > .slds-day:after {
  content: '';
  position: absolute;
  background: #0070d2;
  top: 0;
  left: -50%;
  height: 100%;
  width: 2.5rem;
  transform: translateX(-0.5rem);
  z-index: -1; }

.slds-datepicker .slds-has-multi-row-selection .slds-is-selected-multi:first-child > .slds-day:before {
  left: 0;
  transform: translateX(-0.25rem); }

.slds-datepicker .slds-has-multi-row-selection .slds-is-selected-multi:last-child > .slds-day:after {
  left: auto;
  right: 0;
  transform: translateX(0.25rem); }

.slds-datepicker td.slds-is-selected-multi > .slds-day {
  overflow: visible; }

.slds-datepicker td.slds-is-selected-multi.slds-is-today > .slds-day {
  box-shadow: white 0 0 0 1px inset; }

.slds-datepicker td.slds-is-selected-multi + .slds-is-selected-multi > .slds-day:before {
  content: '';
  position: absolute;
  background: #0070d2;
  top: 0;
  left: -50%;
  height: 100%;
  width: 2.5rem;
  transform: translateX(-0.5rem);
  z-index: -1; }
.slds-button-group,
.slds-button-group-list {
  display: -ms-inline-flexbox;
  display: inline-flex; }

.slds-button-group .slds-button,
.slds-button-group-list .slds-button {
  border-radius: 0;
  border-width: 1px; }

.slds-button-group .slds-button:focus,
.slds-button-group-list .slds-button:focus {
  z-index: 1; }

.slds-button-group .slds-button + .slds-button,
.slds-button-group .slds-button + .slds-button_last .slds-button,
.slds-button-group .slds-button + .slds-button--last .slds-button,
.slds-button-group-list li + li .slds-button {
  margin-left: -1px; }

.slds-button-group-list li:first-child .slds-button,
.slds-button-group .slds-button:first-child {
  border-radius: 0.25rem 0 0 0.25rem; }
.slds-button {
  position: relative;
  display: inline-block;
  padding: 0;
  background: transparent;
  background-clip: border-box;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  line-height: 1.875rem;
  text-decoration: none;
  color: #0070d2;
  -webkit-appearance: none;
  white-space: normal;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none; }

.slds-button:hover, .slds-button:focus, .slds-button:active, .slds-button:visited {
  text-decoration: none; }

.slds-button:hover, .slds-button:focus {
  color: #005fb2; }

.slds-button:focus {
  outline: 0;
  box-shadow: 0 0 3px #0070D2; }

.slds-button:active {
  color: #005fb2; }

.slds-button[disabled] {
  color: #dddbda; }

.slds-button[disabled] * {
  pointer-events: none; }

.slds-button a {
  color: currentColor; }

.slds-button:hover .slds-button__icon, .slds-button:focus .slds-button__icon, .slds-button:active .slds-button__icon, .slds-button[disabled] .slds-button__icon {
  fill: currentColor;
  pointer-events: none; }

.slds-button + .slds-button-group,
.slds-button + .slds-button-group-list {
  margin-left: 0.25rem; }

.slds-button + .slds-button {
  margin-left: 0.25rem; }
.slds-button-space-left {
  margin-left: 0.25rem; }

"
`;

exports[`normalize matches the snapshot 1`] = `
"html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%; }

body {
  margin: 0; }

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block; }

audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline; }

audio:not([controls]) {
  display: none;
  height: 0; }

template {
  display: none; }

a {
  background-color: transparent; }

a:active,
a:hover {
  outline: 0; }

abbr[title] {
  border-bottom: 1px dotted; }

b,
strong {
  font-weight: bold; }

dfn {
  font-style: italic; }

h1 {
  font-size: 2em;
  margin: 0.67em 0; }

mark {
  background: #ff0;
  color: #000; }

small {
  font-size: 80%; }

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sup {
  top: -0.5em; }

sub {
  bottom: -0.25em; }

img {
  border: 0; }

svg:not(:root) {
  overflow: hidden; }

figure {
  margin: 1em 40px; }

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0; }

pre {
  overflow: auto; }

code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em; }

button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0; }

button {
  overflow: visible; }

button,
select {
  text-transform: none; }

button,
html input[type=\\"button\\"],
input[type=\\"reset\\"],
input[type=\\"submit\\"] {
  -webkit-appearance: button;
  cursor: pointer; }

button[disabled],
html input[disabled] {
  cursor: default; }

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0; }

input {
  line-height: normal; }

input[type=\\"checkbox\\"],
input[type=\\"radio\\"] {
  box-sizing: border-box;
  padding: 0; }

input[type=\\"number\\"]::-webkit-inner-spin-button,
input[type=\\"number\\"]::-webkit-outer-spin-button {
  height: auto; }

input[type=\\"search\\"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box; }

input[type=\\"search\\"]::-webkit-search-cancel-button,
input[type=\\"search\\"]::-webkit-search-decoration {
  -webkit-appearance: none; }

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em; }

legend {
  border: 0;
  padding: 0; }

textarea {
  overflow: auto; }

optgroup {
  font-weight: bold; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

td,
th {
  padding: 0; }

*,
*:before,
*:after {
  box-sizing: border-box; }

:-ms-input-placeholder {
  color: #706e6b;
  font-weight: 400;
  font-size: 0.8125rem; }

::placeholder {
  color: #706e6b;
  font-weight: 400;
  font-size: 0.8125rem; }

::-moz-selection {
  background: #d8edff;
  text-shadow: none;
  color: #3e3e3c; }

::selection {
  background: #d8edff;
  text-shadow: none;
  color: #3e3e3c; }

html {
  font-family: \\"Salesforce Sans\\", Arial, sans-serif;
  font-size: 100%;
  line-height: 1.5;
  background: #fafaf9;
  color: #3e3e3c;
  -webkit-tap-highlight-color: transparent; }

body {
  font-size: 0.8125rem;
  background: transparent; }
.slds-datepicker {
  padding: 0;
  font-size: 0.75rem; }

"
`;

exports[`utilities matches the snapshot 1`] = `
".slds-truncate_container_66,
.slds-truncate_container--66 {
  max-width: 66%; }
.slds-hyphenate {
  overflow-wrap: break-word;
  word-wrap: break-word;
  -webkit-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto; }

"
`;
